--- a/.test/config/config.yaml
+++ b/.test/config/config.yaml
@@ -1,3 +1,10 @@
 bams: ".test/config/bams.tsv"
 pwcomps: ".test/config/pwcomps.tsv"
 genome: "resources/genome.fasta"
+
+
+params:
+  angsd_bam_filters: " -minMapQ 20  -minQ 33 -baq 1 "
+  calc_saf: " -dosaf 1 -gl 1 "
+  realSFS: " -fold 1 "
+  
