add conda stuff to rules

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -46,6 +46,8 @@ rule calc_saf:
   output:
     saf="results/saf/{grp}.saf.idx"
   threads: 20
+  conda:
+    "../envs/angsd.yaml"
   log:
     "results/logs/calc_saf/{grp}.txt"
   benchmark:
@@ -65,6 +67,8 @@ rule calc_2dsfs:
   params:
     rs=config["params"]["realSFS"]
   threads: 20
+  conda:
+    "../envs/angsd.yaml"
   log:
     "results/logs/calc_2dsfs/{p1}--x--{p2}.txt"
   benchmark:
@@ -83,6 +87,8 @@ rule calc_fst_binaries:
   output:
     "results/fst_bin/{p1}--x--{p2}.fst.idx"
   threads: 20
+  conda:
+    "../envs/angsd.yaml"
   log:
     "results/logs/calc_fst_binaries/{p1}--x--{p2}.txt"
   benchmark:
@@ -98,6 +104,8 @@ rule extract_fst_values:
     "results/fst_bin/{p1}--x--{p2}.fst.idx"
   output:
     "results/fst/{p1}--x--{p2}.txt"
+  conda:
+    "../envs/angsd.yaml"
   log:
     "results/logs/extract_fst_values/{p1}--x--{p2}.txt"
   benchmark:
