--- a/example-configs/sacto-chinook-3-chrom/config.yaml
+++ b/example-configs/sacto-chinook-3-chrom/config.yaml
@@ -10,3 +10,4 @@ params:
   angsd_bam_filters: " -minMapQ 20  -minQ 30 -baq 1 "
   calc_saf: " -dosaf 1 -gl 1 "
   realSFS: " -fold 1 "
+  winsfs: " "
