--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -18,10 +18,12 @@ rule index_fasta:
     fai=config["genome"] + ".fai"
   log:
     "results/logs/index_fasta/log.txt"
+  conda:
+    "../envs/samtools.yaml"
   benchmark:
     "results/benchmarks/index_fasta/log.txt"
   shell:
-    " samtools index {input.genome} 2> {log} "
+    " samtools faidx {input.genome} 2> {log} "
     
 
 rule make_bamlists:
