Add mtime rerun trigger

--- a/hpcc-profiles/slurm/sedna/config.yaml
+++ b/hpcc-profiles/slurm/sedna/config.yaml
@@ -23,6 +23,7 @@ keep-going: True
 rerun-incomplete: True
 printshellcmds: True
 use-conda: True
+rerun-triggers: mtime
 cluster-status: status-sacct.sh
 cluster-cancel: scancel
 cluster-cancel-nargs: 1000
