--- a/.test/config/config.yaml
+++ b/.test/config/config.yaml
@@ -18,4 +18,6 @@ params:
   winsfs: " "
   fst_window_size: [50000, 30000, 40000]
   fst_window_step: [10000, 5000,  20000]
+  theta_window_size: [50000]
+  theta_window_step: [10000]
   
